--- a/fplanalytics/css/style.css
+++ b/fplanalytics/css/style.css
@@ -897,9 +897,10 @@ footer img {
 
 .top-bar {
     color: #333;
-    padding: 150px 0 150px;
-    background: -webkit-linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../img/01.jpg);
-    background: linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../img/01.jpg);
+    /*padding: 150px 0 150px;*/
+	padding: 20px 0 20px;
+    background: -webkit-linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)); /*, url(../img/01.png);*/
+    background: linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)); /*, url(../img/01.png);*/
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
