--- a/fplanalytics/css/style.css
+++ b/fplanalytics/css/style.css
@@ -908,8 +908,8 @@ footer img {
 }
 
 .top-bar h1 {
-    font-size: 60px;
-    text-transform: uppercase;
+    font-size: 45px;
+    text-transform: none;
     font-weight: 700;
     color: #02894E;
     line-height: 50px;
@@ -917,7 +917,7 @@ footer img {
 
 .top-bar p {
     font-size: 15px;
-    text-transform: uppercase;
+    text-transform: none;
     font-weight: 500;
     color: #777;
 }
